--- a/README
+++ b/README
@@ -7,7 +7,7 @@ the json file that is used to display the graph with the following:
 zgrep -h 'http://www.w3.org/2002/07/owl#sameAs' data/btc-2010-chunk-*.gz | \
     scripts/quadtab.pl | \
     scripts/sameas.py | \
-    sort | uniq -c | sort -rn | \
+    sort | uniq -c \
     scripts/jsonify.py > docs/sameas.js
 
 You'll need to have recent-ish versions of Perl, Python and pygraph installed.
